--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
+    <title>Expanding Cards</title>
+    <script src="scrip.js" defer></script>
+</head>
+
+<body>
+    <div class="container">
+        <div class="panel active"
+            style="background-image: url('https://images.pexels.com/photos/28316692/pexels-photo-28316692/free-photo-of-a-forest-with-a-small-stream-and-trees.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');">
+            <h3>Export world</h3>
+        </div>
+        <div class="panel "
+            style="background-image: url('https://images.pexels.com/photos/1001682/pexels-photo-1001682.jpeg?auto=compress&cs=tinysrgb&w=1200');">
+            <h3>Sea</h3>
+        </div>
+        <div class="panel "
+            style="background-image: url('https://images.pexels.com/photos/1366919/pexels-photo-1366919.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');">
+            <h3>Snow mountain</h3>
+        </div>
+        <div class="panel "
+            style="background-image: url('https://images.pexels.com/photos/2189700/pexels-photo-2189700.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');">
+            <h3>River</h3>
+        </div>
+        <div class="panel "
+            style="background-image: url('https://images.pexels.com/photos/4017971/pexels-photo-4017971.png?auto=compress&cs=tinysrgb&w=1200');">
+            <h3>Desrt</h3>
+        </div>
+    </div>
+
+
+
+
+
+</body>
+
+</html>
